--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.15.9
   intl: ^0.19.0
   firebase_core: ^2.27.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
